# stock_market_proj_7pm

./: README.md  api.ipynb  hdfc.csv  main.py  pyproject.toml  requirements.txt  sbin.csv  template.py  tsla.csv  utils.py
